If there is a FS_RAID partition on a disk, then we shouldn't look at the raw partition.  In particular, we now need to account for the case where an existing FS_RAID partition is now open because it is in use. If that is the case, we don't look at the raw partition.

Addresses PR kern/56369.